test/fail_compilation/fail207.d
/*
TEST_OUTPUT:
---
fail_compilation/fail207.d(10): Error: found end of file instead of initializer
fail_compilation/fail207.d(10): Error: semicolon needed to end declaration of `x` begun on line 9, instead of `End of File`
---
*/

int x = {
